# gemini_ai_client

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/1_generate_rules/: form_question.json  form_respond.json  generate_rules.py  generate_rules.rs  system_prompt.md
src/2_summarize_files/: summarize_files.py  system_prompt.md  user_prompt.txt
src/3_sort_files/: file_summary.json  history_file_movements.json  rule.json  sort_files.py  system_prompt.md  user_prompt.txt
src/4_renew_rules/: file_movements.json  file_summary.json  match_movements.json  refined_system_prompt.md  renew_rules.py  rule.json  system_prompt.md  update_summary_path.py
